add library swagger for products
